creation of .new-part CSS

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section class="news-part">
     <div class="header-news">
       <div class="left-part">
-        <h2>les news du campus</h2>
+        <h2>LES NEWS DU CAMPUS</h2>
         <p>Suivez l'actualité de Gaming Campus, de G.Guru, G.B.S et G.Academy.</p>
       </div>
       <div class="right-part">
