--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
-
-<head>
+<html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>TP5 - Gaming Campus</title>
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-  <link href="./styles.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<link href="./styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -70,8 +68,8 @@
   </section>
 
   <section class="news-part">
-  <div class="header-news">
-    <div class="left-part">
+    <div class="header-news">
+      <div class="left-part">
         <h2>LES NEWS DU CAMPUS</h2>
         <p>Suivez l'actualité de Gaming Campus, de G.Guru, G.B.S et G.Academy.</p>
       </div>
@@ -119,102 +117,100 @@
     </div>
   </section>
 
-  
-    <div class="contact-container">
-      <div class="contact-list">
-        <div class="list">
-          <div id="contact-img">
-            <img src="./assets/img/logo-gc-footer.jpg" alt="logo-end">
-          </div>
-        </div>
-        <div class="list">
-          <h5>infos pratiques</h5>
-          <ul class="infos-p">
-            <li><a href="#">Gaming Business School</a></li>
-            <li><a href="#">Gaming Academy</a></li>
-            <li><a href="#">Gaming Guru</a></li>
-            <li><a href="#">Recrutement</a></li>
-            <li><a href="#">Investisseurs</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">C.G.U</a></li>
-          </ul>
-        </div>
-        <div class="list">
-          <h5>parents</h5>
-          <p>Questions / réponses pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le
-            choix de Gaming Campus.</p>
-          <a href="#">En savoir plus</a>
-        </div>
-        <div class="list">
-          <h5>nous contacter</h5>
-          <h6>Tél. 04 28 29 81 03</h6>
-          <h6>contact@gamingcampus.fr</h6>
-          <h5 class="network">nous suivre</h5>
-          <div class="footer-logos">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-instagram"></i>
-          </div>
-          <p class="copyright">© 2018 Gaming Campus.</p>
-          <p>Tout droits réservés.</p>
+
+  <div class="contact-container">
+    <div class="contact-list">
+      <div class="list">
+        <div id="contact-img">
+          <img src="./assets/img/logo-gc-footer.jpg" alt="logo-end">
         </div>
       </div>
-      <div class="contact-medias">
-        <div class="medias-text">
-          <h3>ils parlent de nous</h3>
-          <p>Voir toutes les retombées presse.</p>
+      <div class="list">
+        <h5>infos pratiques</h5>
+        <ul class="infos-p">
+          <li><a href="#">Gaming Business School</a></li>
+          <li><a href="#">Gaming Academy</a></li>
+          <li><a href="#">Gaming Guru</a></li>
+          <li><a href="#">Recrutement</a></li>
+          <li><a href="#">Investisseurs</a></li>
+          <li><a href="#">Mentions légales</a></li>
+          <li><a href="#">C.G.U</a></li>
+        </ul>
+      </div>
+      <div class="list">
+        <h5>parents</h5>
+        <p>Questions / réponses pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le
+          choix de Gaming Campus.</p>
+        <a href="#">En savoir plus</a>
+      </div>
+      <div class="list">
+        <h5>nous contacter</h5>
+        <h6>Tél. 04 28 29 81 03</h6>
+        <h6>contact@gamingcampus.fr</h6>
+        <h5 class="network">nous suivre</h5>
+        <div class="footer-logos">
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-linkedin"></i>
+          <i class="fab fa-instagram"></i>
         </div>
-        <div class="medias-logos">
-          <span class="img">
-            <img src="./assets/img/figaro.png" alt="le figaro">
-          </span>
-          <span class="img">
-            <img src="./assets/img/challenges.png" alt="challenges">
-          </span>
-          <span class="img">
-            <img src="./assets/img/leparisien.png" alt="le parisien">
-          </span>
-          <span class="img">
-            <img src="./assets/img/lemonde.png" alt="le monde">
-          </span>
-          <span class="img">
-            <img src="./assets/img/progres.png" alt="le progrès">
-          </span>
-          <span class="img">
-            <img src="./assets/img/echos.png" alt="les echos">
-          </span>
-          <span class="img">
-            <img src="./assets/img/bfm.png" alt="BFM tv">
-          </span>
-          <span class="img">
-            <img src="./assets/img/lepoint.png" alt="l'équipe">
-          </span>
-          <div class="img">
-          </div>
+        <p class="copyright">© 2018 Gaming Campus.</p>
+        <p>Tout droits réservés.</p>
+      </div>
+    </div>
+    <div class="contact-medias">
+      <div class="medias-text">
+        <h3>ils parlent de nous</h3>
+        <p>Voir toutes les retombées presse.</p>
+      </div>
+      <div class="medias-logos">
+        <span class="img">
+          <img src="./assets/img/figaro.png" alt="le figaro">
+        </span>
+        <span class="img">
+          <img src="./assets/img/challenges.png" alt="challenges">
+        </span>
+        <span class="img">
+          <img src="./assets/img/leparisien.png" alt="le parisien">
+        </span>
+        <span class="img">
+          <img src="./assets/img/lemonde.png" alt="le monde">
+        </span>
+        <span class="img">
+          <img src="./assets/img/progres.png" alt="le progrès">
+        </span>
+        <span class="img">
+          <img src="./assets/img/echos.png" alt="les echos">
+        </span>
+        <span class="img">
+          <img src="./assets/img/bfm.png" alt="BFM tv">
+        </span>
+        <span class="img">
+          <img src="./assets/img/lepoint.png" alt="l'équipe">
+        </span>
+        <div class="img">
         </div>
+      </div>
 
+
+
+      <footer>
+        <h3>partenaires officiels</h3>
+        <ul>
+          <li><img src="./assets/img/apollo.png" alt="apollo"></li>
+          <li><img src="./assets/img/chiliz.png" alt="chiliz"></li>
+          <li><img src="./assets/img/omen.png" alt="omen"></li>
+          <li><img src="./assets/img/joa.png" alt="joa"></li>
+          <li><img src="./assets/img/zol.png" alt="zol"></li>
+          <li><img src="./assets/img/maxonomic.png" alt="maxndmic"></li>
+          <li><img src="./assets/img/credit-mutuel.png" alt="credit mutuel"></li>
+          <li><img src="./assets/img/talent-web.png" alt="TW"></li>
+          <li><img src="./assets/img/ubisoft.png" alt="ubisoft"></li>
+          <li><img src="./assets/img/vitality.png" alt="vitality"></li>
+        </ul>
+      </footer>
   
-
-  <footer>
-    <h3>partenaires officiels</h3>
-    <ul>
-      <li><img src="./assets/img/apollo.png" alt="apollo"></li>
-      <li><img src="./assets/img/chiliz.png" alt="chiliz"></li>
-      <li><img src="./assets/img/omen.png" alt="omen"></li>
-      <li><img src="./assets/img/joa.png" alt="joa"></li>
-      <li><img src="./assets/img/zol.png" alt="zol"></li>
-      <li><img src="./assets/img/maxonomic.png" alt="maxndmic"></li>
-      <li><img src="./assets/img/credit-mutuel.png" alt="credit mutuel"></li>
-      <li><img src="./assets/img/talent-web.png" alt="TW"></li>
-      <li><img src="./assets/img/ubisoft.png" alt="ubisoft"></li>
-      <li><img src="./assets/img/vitality.png" alt="vitality"></li>
-    </ul>
-  </footer>
 
 
 </body>
-
-
-
 </html>
