creation nav nab responsive desktop

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <nav>
     <ul>
-      <li>Accueil</li>
-      <li>business school</li>
-      <li>ecole esport</li>
-      <li>cours de jeux vidéo</li>
-      <li>le campus</li>
-      <li>newsroom</li>
-      <li>parents</li>
-      <li id="language">FR | EN</li>
+      <li><a href="#">Accueil</a></li>
+      <li><a href="#">business school</a></li>
+      <li><a href="#">ecole esport</a></li>
+      <li><a href="#">cours de jeux vidéo</a></li>
+      <li><a href="#">le campus</a></li>
+      <li><a href="#">newsroom</a></li>
+      <li><a href="#">parents</a></li>
+      <li id="language"><a href="#">FR | EN</a></li>
     </ul>
   </nav>
   <header>
@@ -128,13 +128,13 @@
       <div class="list">
         <h5>infos pratiques</h5>
         <ul class="infos-p">
-          <li><a href="#">Gaming Business School</a></li>
-          <li><a href="#">Gaming Academy</a></li>
-          <li><a href="#">Gaming Guru</a></li>
-          <li><a href="#">Recrutement</a></li>
-          <li><a href="#">Investisseurs</a></li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="#">C.G.U</a></li>
+          <li><a href="#gaming-business">Gaming Business School</a></li>
+          <li><a href="#gaming-academy">Gaming Academy</a></li>
+          <li><a href="#gaming-guru">Gaming Guru</a></li>
+          <li><a href="#recrutement">Recrutement</a></li>
+          <li><a href="#investisseurs">Investisseurs</a></li>
+          <li><a href="#mentions">Mentions légales</a></li>
+          <li><a href="#c-g-u">C.G.U</a></li>
         </ul>
       </div>
       <div class="list">
@@ -209,7 +209,7 @@
           <li><img src="./assets/img/vitality.png" alt="vitality"></li>
         </ul>
       </footer>
-  
+   
 
 
 </body>
