media queries of.news-part with flex

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#">Accueil</a></li>
+      
+      <li><a class="try"href="#">Accueil</a></li>
       <li><a href="#">business school</a></li>
       <li><a href="#">ecole esport</a></li>
       <li><a href="#">cours de jeux vidéo</a></li>
